Testing with uncompressed version of the game

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Portfolio.data.gz",
-        frameworkUrl: "Build/Portfolio.framework.js.gz",
-        codeUrl: "Build/Portfolio.wasm.gz",
+        dataUrl: "Build/Portfolio.data",
+        frameworkUrl: "Build/Portfolio.framework.js",
+        codeUrl: "Build/Portfolio.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "PortfolioGame",
