Fixing URL linkdin error

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div id="unity-build-contact"> Contact Me : 
                 <a href="mailto:rbayer.developer.com" id="unity-build-link2"></a>
-                <a href="linkedin.com/in/𝐑𝐨𝐦𝐚𝐢𝐧-𝐁𝐚𝐲𝐞𝐫-87584a1b6" id="unity-build-link1"></a>
+                <a href="www.linkedin.com/in/𝐑𝐨𝐦𝐚𝐢𝐧-𝐁𝐚𝐲𝐞𝐫-87584a1b6" id="unity-build-link1"></a>
             </div>
 
         </div>
