Solved Contact Glitch + gray screen glitch

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <!-- <div id="unity-webgl-logo"></div> -->
             <!-- <div id="unity-fullscreen-button"></div> -->
             <div id="unity-build-title">Romain Bayer Portfolio</div>
-            <a href="https://www.w3schools.com" id="unity-build-link"></a>
+
+            <div id="unity-build-contact"> Contact Me : 
+                <a href="mailto:rbayer.developer.com" id="unity-build-link2"></a>
+                <a href="http://www.linkedin.com/in/𝐑𝐨𝐦𝐚𝐢𝐧-𝐁𝐚𝐲𝐞𝐫-87584a1b6" id="unity-build-link1"></a>
+            </div>
+
         </div>
 
         <canvas id="unity-canvas" width=960 height=600></canvas>
